becomes obsolete.  Minor INCOMPATIBILITY, due to potential change of
indices of schematic variables.

* Renamed some inner syntax categories:

    num ~> num_token
    xnum ~> xnum_token
    xstr ~> str_token

Minor INCOMPATIBILITY.  Note that in practice "num_const" or
"num_position" etc. are mainly used instead (which also include
position information via constraints).


*** Pure ***

* Obsolete command 'types' has been discontinued.  Use 'type_synonym'
instead.  INCOMPATIBILITY.

* Ancient code generator for SML and its commands 'code_module',
'code_library', 'consts_code', 'types_code' have been discontinued.
Use commands of the generic code generator instead.  INCOMPATIBILITY.

* Redundant attribute 'code_inline' has been discontinued. Use
'code_unfold' instead.  INCOMPATIBILITY.

* Dropped attribute 'code_unfold_post' in favor of the its dual
'code_abbrev', which yields a common pattern in definitions like

  definition [code_abbrev]: "f = t"

INCOMPATIBILITY.

* Sort constraints are now propagated in simultaneous statements, just
like type constraints.  INCOMPATIBILITY in rare situations, where
distinct sorts used to be assigned accidentally.  For example:

  lemma "P (x::'a::foo)" and "Q (y::'a::bar)"  -- "now illegal"

  lemma "P (x::'a)" and "Q (y::'a::bar)"
    -- "now uniform 'a::bar instead of default sort for first occurence (!)"


*** HOL ***

* Type 'a set is now a proper type constructor (just as before
Isabelle2008).  Definitions mem_def and Collect_def have disappeared.
Non-trivial INCOMPATIBILITY.  For developments keeping predicates and
sets separate, it is often sufficient to rephrase sets S accidentally
used as predicates by "%x. x : S" and predicates P accidentally used
as sets by "{x. P x}".  Corresponding proofs in a first step should be
pruned from any tinkering with former theorems mem_def and
Collect_def.  For developments which deliberately mixed predicates and
sets, a planning step is necessary to determine what should become a